--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -48,6 +48,7 @@
   min-width: 10px;
   width: 10px;
   height: 10px;
+  background: var(--ifm-menu-link-sublist-icon) 50% / 1.1rem 1.1rem;
 }
 
 .theme-doc-sidebar-item-category .menu__list-item {
@@ -76,4 +77,13 @@
 
 .chakra-collapse {
   width: 100%;
+}
+
+.sidebar-html-title {
+  margin-top: 20px;
+  margin-left: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  color: #4f5a66;
 }
