--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -80,10 +80,15 @@
 }
 
 .sidebar-html-title {
-  margin-top: 20px;
+  margin-top: 30px;
   margin-left: 10px;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 700;
-  color: #4f5a66;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.sidebar-gap {
+  margin-top: 30px;
+  color: white;
 }
