--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -92,3 +92,23 @@
   margin-top: 30px;
   color: white;
 }
+
+.navbar-item-link {
+  font-size: 14px;
+}
+
+.sidebar-first-html-title {
+  margin-top: 20px;
+  margin-left: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.menu__caret:before {
+  min-width: 10px;
+  width: 10px;
+  height: 10px;
+  background: var(--ifm-menu-link-sublist-icon) 50% / 1.1rem 1.1rem;
+}
