add documentation on running vital locally

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,6 +13,7 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
+  --ifm-link-color: #4b63cc;
   --ifm-code-font-size: 95%;
   --ifm-font-family: "Inter";
   --ifm-h1-font-size: 2rem;
